--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^12.4.1",
+    "gsap": "^3.12.7",
+    "hamburger-react": "^2.5.2",
+    "next": "^15.1.7",
+    "prismjs": "^1.29.0",
     "react": "^19.0.0",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-icons": "^5.4.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17"
   }
 }
